--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  transition: all 0.5s;
+  transition: all 0.9s;
   z-index: 997;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -557,7 +557,7 @@ h1, h2, h3, h4, h5, h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 80px 0;
+  padding: 20px 0;
   overflow: hidden;
 }
 
@@ -635,7 +635,7 @@ section {
   font-size: 14px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 12px 32px;
+  padding: 6px 32px;
   border-radius: 50px;
   transition: 0.3s;
   line-height: 1;
@@ -650,6 +650,40 @@ section {
   background: #009961;
   color: #fff;
   text-decoration: none;
+}
+
+
+.about .icon-box h4 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 5px 0 10px 60px;
+}
+
+.about .icon-box i {
+  font-size: 48px;
+  float: left;
+  color: #009961;
+}
+
+.about .icon-box p {
+  font-size: 15px;
+  color: #848484;
+  margin-left: 60px;
+}
+
+.about .image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+
+#aboutsec {
+  width: 100%;
+  height: 70vh;
+  background: url("../img/hn-bg.jpg") top center;
+  background-size: cover;
+  position: relative;
 }
 
 /*--------------------------------------------------------------
