Index logo changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo {
-  font-size: 28px;
+  font-size: 35px;
   margin: 0;
   padding: 0;
   line-height: 1;
@@ -123,11 +123,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo a {
-  color: #fff;
+
+    font-family: Viner Hand ITC;
+    color:#00cc81;
+    font-style: italic
+
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 75px;
 }
 
 @media (max-width: 992px) {
